testdata/fixtures/audit/negative/cookie_insecure_neg_secure_httponly_js.js
function login(req, res) {
  const token = issueSessionToken(req.user);
  res.cookie("session", token, { secure: true, httpOnly: true });
  res.json({ ok: true });
}

module.exports = login;
